<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendaNovaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#eee">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AppAgenda"
            android:background="#00F"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seu App para Agenda"
            android:background="#f00"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNome"
            style="@style/labels"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtHintNome"
            style="@style/campos"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtFone"
                style="@style/labels"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtHintFone"
                android:inputType="phone"
                style="@style/campos"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTurno"
            style="@style/labels"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtManha"
                android:id="@+id/rbManha2"
                style="@style/campos"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNoite"
                android:id="@+id/rbNoite2"
                style="@style/campos"/>



        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEstado"
                style="@style/labels"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/estados"
                />

        </LinearLayout>



        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Aceita receber email"
            style="@style/campos"/>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSalvar" />


    </LinearLayout>

</ScrollView>